<resources>
    <string name="app_name">CalCalories</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="diary">Diary</string>
    <string name="progress">Progress</string>
    <string name="recipes">Recipes</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>



    <string name="please_check_your_connection_and_try_again">Connection Error, Please check your internet connection and try again.</string>

    <string name="the_number_you_entered_is_incorrect">The number you entered is not valid, \n please use this format when entering the number:\n %1$s</string>



    <string name="send">Send</string>
    <string name="save">Save</string>

    <string name="saved_successfully">Saved successfully</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="deleted_successfully">Deleted successfully</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="please_enter_your_email">Please enter your valid E-mail.</string>
    <string name="please_enter_your_password">Please enter your valid password.</string>


    <string name="edit_account">Edit Account</string>
    <string name="personal_details">Personal Details</string>
    <string name="about">About</string>

    <string name="your_message">Your message</string>

    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="you_must_log_in_to_your_account_first">You must log in to your account first</string>
    <string name="you_must_sign_in_again">You must sign in again!</string>
    <string name="do_you_want_to_logout_of_your_account">Do you want to logout of your account?</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth date</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>




    <string name="fill_details_hint">The plan will be made according to the following data, so please fill it with the correct data</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_types">Meal Types</string>
    <string name="meal_name">Meal Name</string>
    <string name="calories">Calories</string>

    <string name="protein">Protein</string>
    <string name="iron">Iron</string>
    <string name="vitamin_a">A</string>

    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="eaten">Eaten</string>
    <string name="remaining">Remaining</string>
    <string name="kcal">kcal</string>
    <string name="daily_goal">Daily goal</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="set_the_normal_rate">Set The Normal Rate</string>
    <string name="no_data">No data</string>
    <string name="or">OR</string>

    <string name="select_picture">Select image</string>
    <string name="cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>

    <string name="search">Search</string>
    <string name="scan_search"><![CDATA[Scan & Search]]></string>
    <string name="scan_meal">Scan meal</string>
    <string name="scan_barcode">Scan barcode</string>

    <string name="select_recipe">Select recipe</string>
    <string name="edit_search">Edit search</string>


</resources>