<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/diary" />

    <item
        android:id="@+id/progressFragment"
        android:icon="@drawable/ic_menu_progress"
        android:title="@string/progress" />

    <item
        android:id="@+id/recipesFragment"
        android:icon="@drawable/ic_menu_recipe"
        android:title="@string/recipes" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_meun_profile"
        android:title="@string/profile" />

</menu>