<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.fragments.settings.EditDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/fill_details_hint"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:hint="@string/birth_date"
                        android:lineSpacingExtra="-3dp"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />


                    <TextView
                        android:id="@+id/txt_birth_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:minWidth="80dp"
                        android:padding="7dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="1991-08-01" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:hint="@string/gender"
                        android:lineSpacingExtra="-3dp"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/male"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:hint="@string/height"
                        android:lineSpacingExtra="-3dp"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        app:suffixText="CM">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:inputType="number"
                            android:maxLength="5"
                            android:background="@color/white"
                            android:padding="7dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="Autofill"
                            tools:text="100" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0"
                        android:hint="@string/weight"
                        android:lineSpacingExtra="-3dp"
                        android:textAlignment="viewStart"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="false"
                        app:suffixText="KG">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:inputType="number"
                        android:background="@color/white"
                        android:maxLength="5"
                        android:padding="7dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:text="50" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/colorSecondary"
                app:cornerRadius="24dp" />

        </LinearLayout>

    </ScrollView>
</layout>